UMN/CS5161 - Compilers/a2/test/test2a.c
/* code to test for variable redeclarations, multiply defined variables etc*/

int main()
{
  int xyz, abc, cons;
  float abc;
  float cde;

  write("Test program")
    ;

  write(xyz);
  for (loopvar = 0; loopvar < 100; loopvar = loopvar + 1)
    {
      xyz = xzy + loopvar;
    }

  write(xyz);
}


